--- a/client/src/locales/gr.json
+++ b/client/src/locales/gr.json
@@ -1021,7 +1021,7 @@
         "newSubscription": "Μια νέα συνδρομή είναι έτοιμη",
         "completeOnboardingMessage": "Συμπληρώστε τη φόρμα εγγραφής για να δημιουργήσετε τον ιστότοπό σας",
         "createNewWebsite": "Δημιουργία Νέας Ιστοσελίδας",
-        "viewDetails": "Προβολή Λεπτομερειών",
+        "websiteViewDetails": "Ιστοσελίδα",
         "edit": "Επεξεργασία",
         "preview": "Προεπισκόπηση",
         "tags": "Tags",
@@ -1256,7 +1256,6 @@
         "continueOnboarding": "Συνεχίστε",
         "alreadyPurchased": "Ήδη Αγοράστηκε",
         "purchase": "Αγορά",
-        "analytics": "Στατιστικά Ιστοσελίδας",
         "analyticsUpsell": {
             "unlockTitle": "Ξεκλειδώστε τα Στατιστικά της Ιστοσελίδας",
             "unlockDescription": "Αποκτήστε αναλυτικές πληροφορίες για την απόδοση της ιστοσελίδας σας. Παρακολουθήστε επισκέπτες, προβολές σελίδων, πηγές επισκεψιμότητας και πολλά άλλα.",
