content-editor changes

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -1054,6 +1054,9 @@
         "attachFiles": "Attach Files (Optional)",
         "uploadFiles": "Upload files",
         "mediaDescription": "Upload and manage files that you want to share with us for your website. You can delete files anytime for ownership control.",
+        "contentEditor": "Content Editor",
+        "contentEditorDescription": "Edit your website content directly with a live preview. Changes will be visible on your live site within 60 seconds after saving.",
+        "openContentEditor": "Open Content Editor",
         "uploadMedia": "Upload Media",
         "noMediaFiles": "No media files uploaded yet. Click the button above to upload your first file.",
         "subscriptions": "Subscriptions",
