--- a/client/src/locales/gr.json
+++ b/client/src/locales/gr.json
@@ -1056,6 +1056,9 @@
         "myWebsites": "Τα Website σου",
         "media": "Πολυμέσα",
         "mediaDescription": "Ανεβάστε και διαχειριστείτε αρχεία που θέλετε να μοιραστείτε μαζί μας για τον ιστότοπό σας. Μπορείτε να διαγράψετε αρχεία ανά πάσα στιγμή για έλεγχο ιδιοκτησίας.",
+        "contentEditor": "Επεξεργασία Περιεχομένου",
+        "contentEditorDescription": "Επεξεργαστείτε το περιεχόμενο της ιστοσελίδας σας απευθείας με ζωντανή προεπισκόπηση. Οι αλλαγές θα είναι ορατές στην ιστοσελίδα σας εντός 60 δευτερολέπτων μετά την αποθήκευση.",
+        "openContentEditor": "Άνοιγμα Επεξεργαστή",
         "uploadMedia": "Ανέβασμα Πολυμέσων",
         "noMediaFiles": "Δεν έχουν μεταφορτωθεί ακόμη αρχεία πολυμέσων. Κάντε κλικ στο παραπάνω κουμπί για να ανεβάσετε το πρώτο σας αρχείο.",
         "noWebsites": "Δεν υπάρχουν ακόμη ιστοσελίδες",
